<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppThemeMaterialComponents"
    android:background="@android:color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <com.google.android.material.appbar.SubtitleCollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:fitsSystemWindows="true"
            app:expandedTitleGravity="bottom|start"
            app:expandedTitleMarginStart="5dp"
            app:collapsedTitleGravity="center_horizontal|center_vertical|center"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <TextView
                android:id="@+id/tvMarkerPriceLabel"
                android:textColor="@color/light_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="105dp"
                android:layout_gravity="bottom|start"
                app:layout_collapseMode="pin"
                app:layout_collapseParallaxMultiplier="-1"
                />


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarMarketPrice"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="none"
                android:layout_marginTop="12dp"
                android:contentInsetStart="0dp"
                android:contentInsetLeft="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"/>



            <ImageView
                android:id="@+id/ivFavoritesUnchecked"
                app:layout_collapseMode="pin"
                android:visibility="invisible"
                android:layout_gravity="top|end"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="15dp"
                android:clickable="true"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_star_border"
                app:layout_collapseParallaxMultiplier="1"
                android:focusable="true"
                android:contentDescription="@string/image_view" />

            <ImageView
                android:id="@+id/ivFavoritesChecked"
                app:layout_collapseMode="pin"
                android:visibility="invisible"
                android:layout_gravity="top|end"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="15dp"
                android:clickable="true"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_star"
                app:layout_collapseParallaxMultiplier="1"
                android:contentDescription="@string/image_view"
                android:focusable="true" />


            <ImageView
                android:id="@+id/ivCoinMarketDetailBackArrow"
                app:layout_collapseMode="pin"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginTop="12dp"
                android:layout_gravity="top|start"
                android:layout_marginStart="15dp"
                android:src="@drawable/ic_baseline_arrow_back"
                android:contentDescription="@string/image_view" />





        </com.google.android.material.appbar.SubtitleCollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/coinChart"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="parent"
                    app:layout_constraintRight_toLeftOf="parent">


                </com.github.mikephil.charting.charts.LineChart>

                <ProgressBar
                    android:id="@+id/coinMarketDetailChartProgressBar"
                    style="?android:progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="175dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/coinChart"/>

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/toggleGroupChartButtons"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:weightSum="6"
                    app:singleSelection="true"
                    android:theme="@style/AppThemeMaterialComponents"
                    app:layout_constraintTop_toBottomOf="@id/coinChart"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:checkedButton="@id/btnChartDay">


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnChartHour"
                        android:text="@string/hour_label"
                        android:textSize="14sp"
                        android:textColor="@drawable/bottom_navigation_buttons_colors"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:padding="1dp"
                        android:layout_marginStart="10dp"
                        style="@style/Widget.MaterialComponents.Button.TextButton"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnChartDay"
                        android:text="@string/day_label"
                        android:textSize="14sp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:padding="1dp"
                        android:textColor="@drawable/bottom_navigation_buttons_colors"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Button.TextButton"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnChartWeek"
                        android:text="@string/week_label"
                        android:textSize="14sp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:padding="1dp"
                        android:textColor="@drawable/bottom_navigation_buttons_colors"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Button.TextButton"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnChartMonth"
                        android:text="@string/month_label"
                        android:textSize="14sp"
                        android:padding="1dp"
                        android:textColor="@drawable/bottom_navigation_buttons_colors"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Button.TextButton"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnChartYear"
                        android:text="@string/year_label"
                        android:textSize="14sp"
                        android:textColor="@drawable/bottom_navigation_buttons_colors"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:padding="1dp"
                        android:background="@android:color/white"
                        style="@style/Widget.MaterialComponents.Button.TextButton"/>


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnChartAll"
                        android:text="@string/all_label"
                        android:textSize="14sp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:padding="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="10dp"
                        android:textColor="@drawable/bottom_navigation_buttons_colors"
                        android:background="@android:color/white"
                        style="@style/Widget.MaterialComponents.Button.TextButton"/>



                </com.google.android.material.button.MaterialButtonToggleGroup>



                <RelativeLayout
                    android:id="@+id/llFollowButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/toggleGroupChartButtons"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnUnFollow"
                        android:text="@string/unfollow_label"
                        android:textColor="@color/theme_color"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_margin="20dp"
                        android:gravity="center"
                        android:textAllCaps="false"
                        android:visibility="invisible"
                        app:backgroundTint="@android:color/white"
                        app:cornerRadius="10dp"
                        app:icon="@drawable/ic_baseline_blue_star"
                        app:iconGravity="textStart"
                        app:iconTint="@color/theme_color"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnFollow"
                        android:text="@string/follow_label"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_margin="20dp"
                        android:gravity="center"
                        android:textAllCaps="false"
                        app:cornerRadius="10dp"
                        app:backgroundTint="@color/theme_color"
                        app:icon="@drawable/ic_baseline_white_star"
                        app:iconGravity="textStart" />

                </RelativeLayout>



                <TextView
                    android:id="@+id/tvAboutCurrencyLabel"
                    android:textSize="30sp"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/llFollowButtons"/>


                <TextView
                    android:id="@+id/tvCurrencyDescription"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvAboutCurrencyLabel"/>


                <TextView
                    android:id="@+id/tvCurrentNewsTitle"
                    android:textSize="30sp"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvCurrencyDescription"/>


                <ProgressBar
                    android:id="@+id/coinDescriptionProgressBar"
                    style="?android:progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tvCurrentNewsTitle"/>



                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/coinNewsRecyclerView"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvCurrentNewsTitle"
                    android:layout_marginBottom="70dp"/>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/newsErrorAnimation"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvCurrentNewsTitle"
                    android:layout_marginBottom="70dp"
                    android:visibility="gone">

                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_fileName="error_animation.json"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:textColor="@android:color/black"
                        android:text="@string/data_not_found_label"/>

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/coinNewsProgressBar"
                    style="?android:progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/coinNewsRecyclerView"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>